displaying a single pair of before and after pictures for yard work

--- a/style.css
+++ b/style.css
@@ -17,3 +17,12 @@
   background-color: black;
   color: white;
 }
+
+.contentHorizontal {
+}
+
+.contentHorizontal img {
+  width: 80%;
+  border: 5px solid black;
+  border-radius: 10px;
+}
