added html for the next pair of photos then hid them (display: none) AND css for vertical photos

--- a/style.css
+++ b/style.css
@@ -32,3 +32,9 @@
   border: var(--imgBorder) solid black;
   border-radius: 10px;
 }
+
+.contentVertical img {
+  height: calc(50vh - (var(--imgBorder) * 2));
+  border: var(--imgBorder) solid black;
+  border-radius: 10px;
+}
