--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@
 .contentVertical img {
   align-items: center;
   justify-content: space-between;
-  width: calc(45vh - (var(--imgBorder) * 2) - 150px);
+  width: calc(38vw - (var(--imgBorder) * 2));
   border: var(--imgBorder) solid black;
   border-radius: 10px;
 }
