set media queries for .contentVertical img on small tables in landscape orientation

--- a/style.css
+++ b/style.css
@@ -35,3 +35,10 @@
   border: var(--imgBorder) solid black;
   border-radius: 10px;
 }
+
+@media (min-width: 601px) and (orientation: landscape) {
+  .contentVertical img {
+    width: auto;
+    height: calc(90vh - (var(--imgBorder) * 2) - 150px);
+  }
+}
