added media queries for small tablets in landscape orientation

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 :root {
   --imgBorder: 3px;
+  --horizDisplay: "block";
 }
 
 .header {
@@ -19,7 +20,6 @@
 
 .contentHorizontal .title {
   font-size: 1.25em;
-  margin: 1em 0;
 }
 
 .contentHorizontal img {
@@ -37,8 +37,20 @@
 }
 
 @media (min-width: 601px) and (orientation: landscape) {
+  :root {
+    --horizDisplay: "flex";
+  }
+
   .contentVertical img {
     width: auto;
     height: calc(90vh - (var(--imgBorder) * 2) - 150px);
+  }
+  .contentHorizontal {
+    display: flex;
+    align-items: center;
+  }
+
+  .contentHorizontal div {
+    margin: 0 0.5em;
   }
 }
