--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 :root {
   --imgBorder: 3px;
-  --horizDisplay: "block";
 }
 
 .header {
@@ -22,10 +21,21 @@
 
 .experienceContent {
   width: 90%;
+  height: inherit;
 }
 
 .contentHorizontal {
   width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
+.contentVertical {
+  display: flex;
+  align-items: center;
+  height: 100%;
 }
 
 .contentHorizontal .title {
@@ -53,10 +63,6 @@
 }
 
 @media (min-width: 601px) and (orientation: landscape) {
-  :root {
-    --horizDisplay: "block";
-  }
-
   .contentVertical img {
     width: auto;
     height: calc(90vh - (var(--imgBorder) * 2) - 150px);
