--- a/style.css
+++ b/style.css
@@ -88,6 +88,10 @@ body {
   .experienceContent {
     width: 80%;
   }
+
+  .homeSectionTxt {
+    font-size: 2.5em;
+  }
 }
 
 @media (min-width: 601px) and (orientation: landscape) {
