--- a/style.css
+++ b/style.css
@@ -100,6 +100,7 @@ body {
   }
 
   .homeSection {
+    background-image: url(images/YardWork/misc/horiz.jpg);
     background-position: center;
   }
 
