added in HTML and js for one pair of before and after photos in the trimming section. Also refactored styles so that all sections are 100vw and 100vh

--- a/style.css
+++ b/style.css
@@ -7,6 +7,13 @@ body {
   --nonPhotoPadding: 1em;
 }
 
+.homeSection,
+.contactSection,
+.workSection {
+  height: 100vh;
+  width: 100vw;
+}
+
 .homeSectionTxt {
   color: white;
   text-align: center;
