--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
 :root {
   --imgBorder: 3px;
   --nonPhotoPadding: 1em;
+  --truckColor: #600705;
 }
 
 .homeSection,
@@ -48,7 +49,7 @@ body {
 }
 
 .experienceMenu div {
-  background-color: lightgray;
+  background-color: var(--truckColor);
   width: 30%;
   text-align: center;
   padding: 1em;
