--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 :root {
   --imgBorder: 3px;
   --nonPhotoPadding: 1em;
-  --truckColor: #600705;
+  --truckColor: #000000;
 }
 
 .homeSection,
@@ -50,10 +50,10 @@ body {
 
 .experienceMenu div {
   background-color: var(--truckColor);
+  border: 1px solid black;
   width: 30%;
   text-align: center;
   padding: 1em;
-  margin: 2px;
   font-size: 0.75em;
   text-wrap: nowrap;
 }
@@ -85,6 +85,7 @@ body {
 
 .contentHorizontal .title {
   font-size: 1.25em;
+  color: black;
 }
 
 .contentHorizontal img {
@@ -128,10 +129,6 @@ body {
 
   .contentHorizontal {
     width: auto;
-  }
-
-  .contentHorizontal div {
-    margin: 0 0.5em;
   }
 
   .contentHorizontal img {
