--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 :root {
   --imgBorder: 3px;
   --nonPhotoPadding: 1em;
-  --truckColor: #000000;
+  --menuOptBackground: #000000;
 }
 
 .homeSection,
@@ -49,7 +49,7 @@ body {
 }
 
 .experienceMenu div {
-  background-color: var(--truckColor);
+  background-color: var(--menuOptBackground);
   border: 1px solid black;
   width: 30%;
   text-align: center;
