added user-select property of none for workSection class div to prevent highlight from occuring on double clicks

--- a/style.css
+++ b/style.css
@@ -16,6 +16,10 @@ body {
   width: 100vw;
 }
 
+.workSection {
+  user-select: none;
+}
+
 .homeSectionTxt {
   color: white;
   text-align: center;
