Before and After section (#20)
* added text-wrap: nowrap to workSection menu options and margin to workSection

* linked and renamed pictures for Handyman section

* migrated code from left and right arrow event listeners to the changePics method

* added HTML for handyman section

* added 1 more before and after to handyman section

* refactored variable/class names in HTML and changePics method

* renamed variable across all viable files

* working towards fixing left and right arrow event listener bug

* fixed bug: left and right arrow functionality works for ALL sections

* refactor: narrowed declared variables at top of js file

* refactor: narrowed declared variables at top of js file more

* renamed variables and HTML

* adjusted css to fix horizontal scrollbar issue AND styles of arrows with vertical photos within smaller devices

* mapped before and after photos in trimming folder. Moved home page horizontal photo used outside of trimming folder

* added in HTML and js for one pair of before and after photos in the trimming section. Also refactored styles so that all sections are 100vw and 100vh

* Trimming section photos and functionality behavior is set

* using black and red for work section

* experimented with color schemes, decided on light gray background with black text and button backgrounds

* hover effect on menu options is set using !important

* hover effects on menu options are set programmatically

* renamed css variable

* declared css variable for alternate menu option background color

* added cursor: pointer css to left and right arrows

* added user-select property of none for workSection class div to prevent highlight from occuring on double clicks

* removed horizontal scrollbar by adding overflow-x: hidden; to body tag. Also centered content horizontally using display: flex; flex-direction: column; AND align-items: center; on body tag as well

--- a/style.css
+++ b/style.css
@@ -1,9 +1,27 @@
 body {
   margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow-x: hidden;
 }
 
 :root {
   --imgBorder: 3px;
+  --nonPhotoPadding: 1em;
+  --menuOptBackground: #000000;
+  --menuOptAltBackground: darkgray;
+}
+
+.homeSection,
+.contactSection,
+.workSection {
+  height: 100vh;
+  width: 100vw;
+}
+
+.workSection {
+  user-select: none;
 }
 
 .homeSectionTxt {
@@ -24,7 +42,7 @@ body {
 }
 
 .homeSection {
-  background-image: url(images/YardWork/misc/tree3.jpg);
+  background-image: url(images/trimming/after2.jpg);
   background-size: cover;
   background-position: top;
   background-repeat: no-repeat;
@@ -32,22 +50,29 @@ body {
 
 .header {
   font-size: 1.5em;
+  padding: 0.5em var(--nonPhotoPadding);
+}
+
+.experienceMenu {
+  padding: 0 var(--nonPhotoPadding);
 }
 
 .experienceMenu div {
-  background-color: lightgray;
-  width: 33%;
+  background-color: var(--menuOptBackground);
+  border: 1px solid black;
+  width: 30%;
   text-align: center;
   padding: 1em;
+  font-size: 0.75em;
+  text-wrap: nowrap;
 }
 
 .experienceMenu div:hover {
-  background-color: black;
-  color: white;
+  transition: 0.3s;
   cursor: pointer;
 }
 
-.experienceContent {
+.prevWork {
   width: 90%;
   height: inherit;
 }
@@ -68,6 +93,7 @@ body {
 
 .contentHorizontal .title {
   font-size: 1.25em;
+  color: black;
 }
 
 .contentHorizontal img {
@@ -85,7 +111,7 @@ body {
 }
 
 @media (min-width: 601px) {
-  .experienceContent {
+  .prevWork {
     width: 80%;
   }
 
@@ -100,7 +126,7 @@ body {
   }
 
   .homeSection {
-    background-image: url(images/YardWork/misc/horiz.jpg);
+    background-image: url(images/homePageHoriz.jpg);
     background-position: center;
   }
 
@@ -111,10 +137,6 @@ body {
 
   .contentHorizontal {
     width: auto;
-  }
-
-  .contentHorizontal div {
-    margin: 0 0.5em;
   }
 
   .contentHorizontal img {
