--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
   user-select: none;
 }
 
-.homeSectionTxt {
+.overlayTxt {
   color: white;
   text-align: center;
   position: absolute;
@@ -115,7 +115,7 @@ body {
     width: 80%;
   }
 
-  .homeSectionTxt {
+  .overlayTxt {
     font-size: 2.5em;
   }
 }
