--- a/style.css
+++ b/style.css
@@ -24,8 +24,18 @@ body {
   user-select: none;
 }
 
+.overlay {
+  position: absolute;
+  background-color: black;
+  opacity: 0.6;
+  width: inherit;
+  height: inherit;
+  z-index: 10;
+}
+
 .overlayTxt {
   color: white;
+  width: inherit;
   text-align: center;
   position: absolute;
   left: 50%;
@@ -108,6 +118,14 @@ body {
   width: calc(38vw - (var(--imgBorder) * 2));
   border: var(--imgBorder) solid black;
   border-radius: 10px;
+}
+
+.servicesList {
+  padding: 0;
+}
+
+.servicesList li {
+  padding: 1em 0;
 }
 
 @media (min-width: 601px) {
