--- a/style.css
+++ b/style.css
@@ -121,12 +121,11 @@ body {
 }
 
 .servicesList {
-  padding-left: 1em;
-  text-align: left;
+  padding: 0;
 }
 
 .servicesList li {
-  padding: 1em 0;
+  padding: 0.5em 0;
 }
 
 @media (min-width: 601px) {
