--- a/style.css
+++ b/style.css
@@ -136,6 +136,10 @@ body {
   .overlayTxt {
     font-size: 2.5em;
   }
+
+  .servicesList li {
+    font-size: 0.6em;
+  }
 }
 
 @media (min-width: 601px) and (orientation: landscape) {
