--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
 .overlay {
   position: absolute;
   background-color: black;
-  opacity: 0.6;
+  opacity: 0.4;
   width: inherit;
   height: inherit;
   z-index: 10;
@@ -164,5 +164,9 @@ body {
   .contentHorizontal img {
     height: calc(50vh - (var(--imgBorder) * 2) - 150px);
     width: auto;
+  }
+
+  .servicesList li {
+    font-size: 0.35em;
   }
 }
