--- a/style.css
+++ b/style.css
@@ -170,3 +170,15 @@ body {
     font-size: 0.35em;
   }
 }
+
+@media (min-width: 1280px) {
+  .servicesList li {
+    font-size: 0.5em;
+  }
+}
+
+@media (min-width: 1920px) {
+  .servicesList li {
+    font-size: 0.8em;
+  }
+}
