--- a/style.css
+++ b/style.css
@@ -24,8 +24,18 @@ body {
   user-select: none;
 }
 
-.homeSectionTxt {
+.overlay {
+  position: absolute;
+  background-color: black;
+  opacity: 0.4;
+  width: inherit;
+  height: inherit;
+  z-index: 10;
+}
+
+.overlayTxt {
   color: white;
+  width: inherit;
   text-align: center;
   position: absolute;
   left: 50%;
@@ -110,13 +120,25 @@ body {
   border-radius: 10px;
 }
 
+.servicesList {
+  padding: 0;
+}
+
+.servicesList li {
+  padding: 0.5em 0;
+}
+
 @media (min-width: 601px) {
   .prevWork {
     width: 80%;
   }
 
-  .homeSectionTxt {
+  .overlayTxt {
     font-size: 2.5em;
+  }
+
+  .servicesList li {
+    font-size: 0.6em;
   }
 }
 
@@ -142,5 +164,21 @@ body {
   .contentHorizontal img {
     height: calc(50vh - (var(--imgBorder) * 2) - 150px);
     width: auto;
+  }
+
+  .servicesList li {
+    font-size: 0.35em;
+  }
+}
+
+@media (min-width: 1280px) {
+  .servicesList li {
+    font-size: 0.5em;
+  }
+}
+
+@media (min-width: 1920px) {
+  .servicesList li {
+    font-size: 0.8em;
   }
 }
