renamed and organized new images. Set one of the images as the background for landscape oriented devices

--- a/style.css
+++ b/style.css
@@ -148,7 +148,7 @@ body {
   }
 
   .homeSection {
-    background-image: url(images/homePageHoriz.jpg);
+    background-image: url(images/trimming/after5.jpg);
     background-position: center;
   }
 
