--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ body {
   width: 100%;
   height: 100%;
   display: flex;
-  flex-direction: column;
+  flex-direction: column-reverse;
   justify-content: space-evenly;
 }
 
