--- a/style.css
+++ b/style.css
@@ -14,8 +14,7 @@ body {
 }
 
 .homeSection,
-.contactSection,
-.workSection {
+.contactSection {
   height: 100vh;
   width: 100vw;
 }
@@ -91,7 +90,7 @@ body {
   width: 100%;
   height: 100%;
   display: flex;
-  flex-direction: column-reverse;
+  flex-direction: column;
   justify-content: space-evenly;
 }
 
