--- a/style.css
+++ b/style.css
@@ -14,14 +14,17 @@ body {
 }
 
 .homeSection,
-.contactSection {
+.contactSection,
+.workSection {
   height: 100vh;
   width: 100vw;
 }
 
 .workSection {
   user-select: none;
-  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .overlay {
