--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
   --imgBorder: 3px;
   --menuOptBackground: #000000;
   --menuOptAltBackground: darkgray;
-  --workSectionSpacing: 2em;
+  --workSectionSpacing: 0.75em;
 }
 
 .homeSection,
@@ -89,9 +89,14 @@ body {
   justify-content: space-evenly;
 }
 
-.beforePhoto,
-.afterPhoto {
+.contentHorizontal .beforePhoto,
+.contentHorizontal .afterPhoto {
   margin: calc(var(--workSectionSpacing) / 2) 0;
+}
+
+.contentVertical .beforePhoto,
+.contentVertical .afterPhoto {
+  margin: calc(var(--workSectionSpacing) / 2);
 }
 
 .contentVertical {
