changed border color of menu btns

--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ body {
 
 .experienceMenu div {
   background-color: var(--menuOptBackground);
-  border: 1px solid black;
+  border: 1px solid var(--menuOptAltBackground);
   width: 30%;
   text-align: center;
   padding: 1em;
