--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
   --menuOptBackground: #000000;
   --menuOptAltBackground: darkgray;
   --workSectionSpacing: 0.75em;
+  --translateXval: 50%;
 }
 
 .homeSection,
@@ -61,6 +62,10 @@ body {
   background-repeat: no-repeat;
 }
 
+.experienceMenu {
+  transform: translateX(calc(50% + var(--workSectionSpacing)));
+}
+
 .experienceMenu div {
   background-color: var(--menuOptBackground);
   border: 1px solid var(--menuOptAltBackground);
@@ -74,6 +79,10 @@ body {
 .experienceMenu div:hover {
   transition: 0.3s;
   cursor: pointer;
+}
+
+.photoPairsCont {
+  justify-content: center;
 }
 
 .prevWork {
@@ -119,7 +128,7 @@ body {
 .contentVertical img {
   align-items: center;
   justify-content: space-between;
-  width: calc(38vw - (var(--imgBorder) * 2));
+  width: calc(100% - (var(--imgBorder) * 2));
   border: var(--imgBorder) solid black;
   border-radius: 10px;
 }
@@ -133,8 +142,22 @@ body {
 }
 
 @media (min-width: 601px) {
+  .experienceMenu {
+    transform: translateX(
+      calc(var(--translateXval) * 2 + var(--workSectionSpacing))
+    );
+  }
+
   .prevWork {
-    width: 80%;
+    width: 70%;
+  }
+
+  :root {
+    --translateXval: 35%; /* 1/2 of .prevWork div width */
+  }
+
+  .photoPairsCont {
+    justify-content: space-around;
   }
 
   .overlayTxt {
