--- a/style.css
+++ b/style.css
@@ -117,7 +117,6 @@ body {
 }
 
 .contentHorizontal img {
-  width: calc(100% - (var(--imgBorder) * 2));
   border: var(--imgBorder) solid black;
   border-radius: 10px;
 }
@@ -125,9 +124,13 @@ body {
 .contentVertical img {
   align-items: center;
   justify-content: space-between;
-  width: calc(100% - (var(--imgBorder) * 2));
   border: var(--imgBorder) solid black;
   border-radius: 10px;
+}
+
+.contentHorizontal img,
+.contentVertical img {
+  width: calc(100% - (var(--imgBorder) * 2));
 }
 
 .servicesList {
@@ -185,18 +188,22 @@ body {
     background-position: center;
   }
 
+  .workSection {
+    height: auto;
+  }
+
+  .contentHorizontal img,
   .contentVertical img {
-    width: auto;
-    height: calc(90vh - (var(--imgBorder) * 2) - 150px);
+    width: 100%;
+    height: auto;
   }
 
-  .contentHorizontal {
-    width: auto;
+  .prevWork {
+    width: 40%;
   }
 
-  .contentHorizontal img {
-    height: calc(50vh - (var(--imgBorder) * 2) - 150px);
-    width: auto;
+  :root {
+    --translateXval: 20%; /* 1/2 of .prevWork div width */
   }
 
   .servicesList li {
