added bold font-weight to before and after text and added margin around said text

--- a/style.css
+++ b/style.css
@@ -118,9 +118,11 @@ body {
   height: 100%;
 }
 
-.contentHorizontal .title {
+.title {
   font-size: 1.25em;
   color: black;
+  margin-bottom: var(--workSectionSpacing);
+  font-weight: bolder;
 }
 
 .contentHorizontal img {
