--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
   --menuOptAltBackground: darkgray;
   --workSectionSpacing: 1em;
   --translateXval: 50%;
+  --servicesBoxSpacing: 1em;
 }
 
 .homeSection,
@@ -158,6 +159,10 @@ body {
   .overlayTxt {
     font-size: 2.5em;
   }
+
+  .serviceBox {
+    font-size: 1.75em;
+  }
 }
 
 @media (min-width: 601px) and (orientation: landscape) {
@@ -177,5 +182,9 @@ body {
 
   .contentHorizontal {
     margin-top: calc(var(--workSectionSpacing) * 2);
+  }
+
+  .serviceBox {
+    font-size: 1.25em;
   }
 }
